@@ -11,7 +11,7 @@ public class CastTestServiceImpl {
     private static final Logger logger = LoggerFactory.getLogger(CastTestServiceImpl.class);
 
     public void testClassCast() {
-        final Object x = Integer.valueOf(0);
-        logger.info(String.valueOf(x));
+        Object x = new Integer(0);
+        System.out.println((String)x); // Thro
     }
 }
